# LLM-API

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  colab_setup.ipynb  setup_colab.sh
.cargo/: config.toml
src/: lib.rs  main.rs
src/config/: mod.rs
src/data/: mod.rs
src/inference/: mod.rs
src/model/: mod.rs
src/training/: mod.rs
